# PanFluExercise

./: CMakeLists.txt
cmake/modules/: FindGSL.cmake
docker/: Dockerfile
src/: EpidemicCases.cpp  EpidemicCases.h  EpidemicDataSet.cpp  EpidemicInitialCases.cpp  EpidemicInitialCases.h  Parameters.cpp  Parameters.h  Stockpile.h  StockpileNetwork.h  StockpileNetworkDistribution.cpp  StockpileNetworkDistribution.h  main.cpp  main.h
src/models/disease/: StochasticSEATIRD.cpp  StochasticSEATIRDSchedule.cpp  iliView.cpp
src/widgets/: ChartWidget.cpp  EpidemicChartWidget.cpp  EpidemicMapWidget.cpp  EventMonitorWidget.cpp  IliMapWidget.cpp  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  StockpileChartWidget.cpp  StockpileMapWidget.cpp  TimelineWidget.cpp
